unpackaged/main/default/objects/BID__c/BID__c.object-meta.xml
<CustomObject>
    <label>Bid</label>
    <nameField>
        <displayFormat>OB-{00000000}</displayFormat>
        <label>BID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>