unpackaged/main/default/objects/BID__c/fields/Bid_Challenge_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Bid_Challenge_Kick_Off__c</fullName>
    <label>Bid Challenge Kick-Off</label>
    <type>Date</type>
</CustomField>