unpackaged/main/default/objects/BID__c/fields/Bid_Description__c.field-meta.xml
<CustomField>
    <fullName>Bid_Description__c</fullName>
    <label>Bid Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>