unpackaged/main/default/objects/BID__c/fields/Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Due_Date__c</fullName>
    <inlineHelpText>This is the destination (i.e. where the bid is lodged) due date</inlineHelpText>
    <label>Bid Due Date</label>
    <type>Date</type>
</CustomField>