unpackaged/main/default/objects/BID__c/fields/Bid_Final_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Bid_Final_Challenge__c</fullName>
    <label>Bid Challenge Final</label>
    <type>Date</type>
</CustomField>