unpackaged/main/default/objects/BID__c/fields/Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bid_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manager of Bid</inlineHelpText>
    <label>Bid Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids1</relationshipName>
    <type>Lookup</type>
</CustomField>