unpackaged/main/default/objects/BID__c/fields/Bid_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bid_Notes__c</fullName>
    <description>Bid Notes</description>
    <inlineHelpText>Bid Notes are used to enter any relevant observation or note to the bid.</inlineHelpText>
    <label>Bid Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>