unpackaged/main/default/objects/BID__c/fields/Bid_Pre_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Bid_Pre_Challenge__c</fullName>
    <label>Bid Challenge Review</label>
    <type>Date</type>
</CustomField>