unpackaged/main/default/objects/BID__c/fields/Bid_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Received_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Bid Received Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>