unpackaged/main/default/objects/BID__c/fields/Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status__c</fullName>
    <label>Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre Release</fullName>
            </value>
            <value>
                <fullName>Under Qualification</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>No Bid Qualified Out</fullName>
            </value>
            <value>
                <fullName>Not Shortlisted</fullName>
            </value>
            <value>
                <fullName>Next Stage</fullName>
            </value>
            <value>
                <fullName>Re-Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>