unpackaged/main/default/objects/BID__c/fields/Bid_Title__c.field-meta.xml
<CustomField>
    <fullName>Bid_Title__c</fullName>
    <label>Bid Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>