unpackaged/main/default/objects/BID__c/fields/Cloud_Pricing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Pricing_Completed__c</fullName>
    <label>Cloud Pricing Completed</label>
    <type>Date</type>
</CustomField>