unpackaged/main/default/objects/BID__c/fields/Cloud_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Pricing_Date__c</fullName>
    <label>Cloud Pricing Date</label>
    <type>Date</type>
</CustomField>