unpackaged/main/default/objects/BID__c/fields/Cloud_Pricing_User__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Pricing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cloud Pricing User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids6</relationshipName>
    <type>Lookup</type>
</CustomField>