unpackaged/main/default/objects/BID__c/fields/Consulting_Director__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consulting Director</description>
    <inlineHelpText>Only TechOne Employees who have employee classification of Consulting Director will show up in search.</inlineHelpText>
    <label>Consulting Director</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technology One Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employee_Classification__c</field>
            <operation>equals</operation>
            <value>Consulting Director</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bids (Consulting Director)</relationshipLabel>
    <relationshipName>Bid_Contact_CD</relationshipName>
    <type>Lookup</type>
</CustomField>