unpackaged/main/default/objects/BID__c/fields/Consulting_Functional_Responses_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Functional_Responses_Date__c</fullName>
    <label>Consulting: Functional Responses Date</label>
    <type>Date</type>
</CustomField>