unpackaged/main/default/objects/BID__c/fields/Consulting_Functional_User__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Functional_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consulting_Functional_User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids3</relationshipName>
    <type>Lookup</type>
</CustomField>