unpackaged/main/default/objects/BID__c/fields/Country_Area__c.field-meta.xml
<CustomField>
    <fullName>Country_Area__c</fullName>
    <formula>Opportunity__r.Country_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country/Area</label>
    <type>Text</type>
</CustomField>