unpackaged/main/default/objects/BID__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <formula>If ((TEXT(Bid_Status__c) = &#39;In Progress&#39; || TEXT(Bid_Status__c) = &#39;Under Qualification&#39;) , Bid_Due_Date__c - TODAY() ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count down days if Bid is Under Qualification or In Progress</inlineHelpText>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>