unpackaged/main/default/objects/BID__c/fields/Delivery_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Qualification__c</fullName>
    <inlineHelpText>Functionality to be added.

Delivery method: On-site or Cloud
Remote - resources</inlineHelpText>
    <label>Delivery Qualification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>