unpackaged/main/default/objects/BID__c/fields/Due_Date_and_time_with_the_Submission_ti__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_and_time_with_the_Submission_ti__c</fullName>
    <label>Due Date and time</label>
    <type>DateTime</type>
</CustomField>