unpackaged/main/default/objects/BID__c/fields/Due_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Time__c</fullName>
    <inlineHelpText>This is the destination (i.e. where the bid is lodged) due time</inlineHelpText>
    <label>Bid Due Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>