unpackaged/main/default/objects/BID__c/fields/Existing_or_New_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_or_New_Customer__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be updated soon to indicate whether this is an existing or new customer.</inlineHelpText>
    <label>Existing or New Customer</label>
    <type>Text</type>
</CustomField>