unpackaged/main/default/objects/BID__c/fields/Final_Content_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Content_Completed__c</fullName>
    <label>Final Content Completed</label>
    <type>Date</type>
</CustomField>