unpackaged/main/default/objects/BID__c/fields/Final_Content_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Content_Date__c</fullName>
    <label>Final Content Date</label>
    <type>Date</type>
</CustomField>