unpackaged/main/default/objects/BID__c/fields/Final_Content_User__c.field-meta.xml
<CustomField>
    <fullName>Final_Content_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Final_Content_User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids8</relationshipName>
    <type>Lookup</type>
</CustomField>