unpackaged/main/default/objects/BID__c/fields/Final_Solution_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Final_Solution_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>