unpackaged/main/default/objects/BID__c/fields/Final_Solution_Definition_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Solution_Definition_Completed__c</fullName>
    <label>Final Solution Definition Completed</label>
    <type>Date</type>
</CustomField>