unpackaged/main/default/objects/BID__c/fields/Final_Solution_Definition_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Solution_Definition_Date__c</fullName>
    <label>Final Solution Definition Date</label>
    <type>Date</type>
</CustomField>