unpackaged/main/default/objects/BID__c/fields/Functional_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Functional_Qualification__c</fullName>
    <inlineHelpText>Functionality to be added.

Identify the products, including 3rd parties that will provide the functionality requested.
Product specialists (Pre-sales, Practice Leads) to determine and respond to functional fit.</inlineHelpText>
    <label>Functional Qualification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>