unpackaged/main/default/objects/BID__c/fields/Implementation_Pricing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Pricing_Completed__c</fullName>
    <label>Implementation Pricing Completed</label>
    <type>Date</type>
</CustomField>