unpackaged/main/default/objects/BID__c/fields/Implementation_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Pricing_Date__c</fullName>
    <label>Implementation Pricing Date</label>
    <type>Date</type>
</CustomField>