unpackaged/main/default/objects/BID__c/fields/Implementation_Pricing_User__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Pricing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implementation_Pricing_User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids5</relationshipName>
    <type>Lookup</type>
</CustomField>