unpackaged/main/default/objects/BID__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <displayFormat>BID-{0000000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>