unpackaged/main/default/objects/BID__c/fields/Licence_Pricing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Licence_Pricing_Completed__c</fullName>
    <label>Licence Pricing Completed</label>
    <type>Date</type>
</CustomField>