unpackaged/main/default/objects/BID__c/fields/Licence_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Licence_Pricing_Date__c</fullName>
    <label>Licence Pricing Date</label>
    <type>Date</type>
</CustomField>