unpackaged/main/default/objects/BID__c/fields/Licence_Pricing_User__c.field-meta.xml
<CustomField>
    <fullName>Licence_Pricing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Licence_Pricing_User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids4</relationshipName>
    <type>Lookup</type>
</CustomField>