unpackaged/main/default/objects/BID__c/fields/Opprtunity_Overview__c.field-meta.xml
<CustomField>
    <fullName>Opprtunity_Overview__c</fullName>
    <formula>Opportunity__r.Overview__c</formula>
    <inlineHelpText>Overview from opportunity</inlineHelpText>
    <label>Opprtunity Overview</label>
    <type>Text</type>
</CustomField>