unpackaged/main/default/objects/BID__c/fields/Price_Budget_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Price_Budget_Qualification__c</fullName>
    <inlineHelpText>Functionality to be added:

How have the Price/Budget been qualified/determined?
Based on functional requirements and implementation costing, can we deliver against the win Price/Budget?</inlineHelpText>
    <label>Price/Budget Qualification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>