unpackaged/main/default/objects/BID__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region</description>
    <formula>Opportunity__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display the TechnologyOne Region for this Account</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>