unpackaged/main/default/objects/BID__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regional Manager</description>
    <inlineHelpText>Only TechOne Employees who have employee classification of regional Manager will show up in search.</inlineHelpText>
    <label>Regional Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (1 AND 3)</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technology One Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employee_Classification__c</field>
            <operation>equals</operation>
            <value>Regional Manager</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employee_Classification__c</field>
            <operation>equals</operation>
            <value>Executive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bids (Regional Manager)</relationshipLabel>
    <relationshipName>Bid_Contact_RM</relationshipName>
    <type>Lookup</type>
</CustomField>