unpackaged/main/default/objects/BID__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <inlineHelpText>Date documents are released by customer</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>