unpackaged/main/default/objects/BID__c/fields/Response_Final_Document_Draft_Complete__c.field-meta.xml
<CustomField>
    <fullName>Response_Final_Document_Draft_Complete__c</fullName>
    <label>Response - Final Document Draft Complete</label>
    <type>Date</type>
</CustomField>