unpackaged/main/default/objects/BID__c/fields/Response_Final_Document_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Final_Document_Draft_Date__c</fullName>
    <label>Response - Final Document Draft Date</label>
    <type>Date</type>
</CustomField>