unpackaged/main/default/objects/BID__c/fields/Response_Final_Document_Draft_User__c.field-meta.xml
<CustomField>
    <fullName>Response_Final_Document_Draft_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Response Final Document Draft User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids9</relationshipName>
    <type>Lookup</type>
</CustomField>