unpackaged/main/default/objects/BID__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <inlineHelpText>Please add comments of potential Risk items that need to or have been verified</inlineHelpText>
    <label>Risk Description</label>
    <type>TextArea</type>
</CustomField>