unpackaged/main/default/objects/BID__c/fields/Risk_Other_3rd_Parties_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Other_3rd_Parties_Qualification__c</fullName>
    <inlineHelpText>Functionality to be added:

Please select from list standard Risk items that apply to this bid.</inlineHelpText>
    <label>Standard Risk Items</label>
    <length>80</length>
    <type>Text</type>
</CustomField>