unpackaged/main/default/objects/BID__c/fields/Search_and_Select_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Search_and_Select_Consultant__c</fullName>
    <label>Search and Select Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>