unpackaged/main/default/objects/BID__c/fields/Services_Pricing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Services_Pricing_Completed__c</fullName>
    <label>Services Pricing Completed</label>
    <type>Date</type>
</CustomField>