unpackaged/main/default/objects/BID__c/fields/Services_Pricing_date__c.field-meta.xml
<CustomField>
    <fullName>Services_Pricing_date__c</fullName>
    <label>Services Pricing Date</label>
    <type>Date</type>
</CustomField>