unpackaged/main/default/objects/BID__c/fields/Services_Pricing_User__c.field-meta.xml
<CustomField>
    <fullName>Services_Pricing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Services Pricing User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids7</relationshipName>
    <type>Lookup</type>
</CustomField>