unpackaged/main/default/objects/BID__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>TEXT(Opportunity__r.Solution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The standard solution is selected when we respond to the customer with that solution. If we respond with a different marketing solution label, the standard solution is referenced when used as basis or starting point to determine our implementation effort.</inlineHelpText>
    <label>Standard Solution</label>
    <type>Text</type>
</CustomField>