unpackaged/main/default/objects/BID__c/fields/Solution_Delivery_cloud_Remot__c.field-meta.xml
<CustomField>
    <fullName>Solution_Delivery_cloud_Remot__c</fullName>
    <label>Solution - Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>New Regions</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>