unpackaged/main/default/objects/BID__c/fields/Solution_implementation__c.field-meta.xml
<CustomField>
    <fullName>Solution_implementation__c</fullName>
    <label>Solution implementation</label>
    <type>TextArea</type>
</CustomField>