unpackaged/main/default/objects/BID__c/fields/Solution_Label__c.field-meta.xml
<CustomField>
    <fullName>Solution_Label__c</fullName>
    <formula>Opportunity__r.Solution_Comments__c</formula>
    <inlineHelpText>Solution Label</inlineHelpText>
    <label>Solution Label</label>
    <type>Text</type>
</CustomField>