unpackaged/main/default/objects/BID__c/fields/Solution_Manager__c.field-meta.xml
<CustomField>
    <fullName>Solution_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution Manager</description>
    <inlineHelpText>Only TechOne Employees who have employee classification of Solution Manager will show up in search.</inlineHelpText>
    <label>Solution Manager</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Employee Contact does not exist or does not exist as Solution Manager</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technology One Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employee_Classification__c</field>
            <operation>equals</operation>
            <value>Solution Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bids (Solution Manager)</relationshipLabel>
    <relationshipName>Bids1</relationshipName>
    <type>Lookup</type>
</CustomField>