unpackaged/main/default/objects/BID__c/fields/Solution_Products_assignee__c.field-meta.xml
<CustomField>
    <fullName>Solution_Products_assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution_Products_assignee</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bids2</relationshipName>
    <type>Lookup</type>
</CustomField>