unpackaged/main/default/objects/BID__c/fields/Solution_Products_Completed__c.field-meta.xml
<CustomField>
    <fullName>Solution_Products_Completed__c</fullName>
    <label>Solution Products Completed</label>
    <type>Date</type>
</CustomField>