unpackaged/main/default/objects/BID__c/fields/Solution_Products_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Products_Date__c</fullName>
    <label>Solution Products Date</label>
    <type>Date</type>
</CustomField>