unpackaged/main/default/objects/BID__c/fields/Solution_Services_AMS__c.field-meta.xml
<CustomField>
    <fullName>Solution_Services_AMS__c</fullName>
    <label>Solution- Services AMS</label>
    <type>TextArea</type>
</CustomField>