unpackaged/main/default/objects/BID__c/fields/Submission_Deadline_Completed__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline_Completed__c</fullName>
    <label>Submission Deadline Completed</label>
    <type>Date</type>
</CustomField>