unpackaged/main/default/objects/BID__c/fields/Submission_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline_Date__c</fullName>
    <label>Submission Deadline Date</label>
    <type>Date</type>
</CustomField>