unpackaged/main/default/objects/BID__c/fields/Submission_Deadline_User__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Submission Deadline User</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BidschNW</relationshipName>
    <type>Lookup</type>
</CustomField>