unpackaged/main/default/objects/BID__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <inlineHelpText>This is the destination (where the bid is lodged) timezone</inlineHelpText>
    <label>Bid Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian Capital Territory - GMT+10:00 (daylight saving time GMT+11:00)</fullName>
            </value>
            <value>
                <fullName>Victoria - GMT+10:00 (daylight saving time GMT+11:00)</fullName>
            </value>
            <value>
                <fullName>New South Wales - GMT+10:00 (daylight saving time GMT+11:00)</fullName>
            </value>
            <value>
                <fullName>Queensland - GMT +10:00</fullName>
            </value>
            <value>
                <fullName>New Zealand - GMT +12 (daylight saving time GMT +13:00)</fullName>
            </value>
            <value>
                <fullName>South Australia and Northern Territory - GMT+9:30 (daylight saving time GMT +10:30)</fullName>
            </value>
            <value>
                <fullName>Tasmania - GMT +10:00 (daylight savings time GMT +11:00)</fullName>
            </value>
            <value>
                <fullName>Western Australia GMT +8:00 (daylight savings time GMT +9:00)</fullName>
            </value>
            <value>
                <fullName>Papua New Guinea - GMT +10:00</fullName>
            </value>
            <value>
                <fullName>Fiji - GMT +12:00</fullName>
            </value>
            <value>
                <fullName>Solomon Islands - GMT+11:00</fullName>
            </value>
            <value>
                <fullName>Samoa - GMT+13:00</fullName>
            </value>
            <value>
                <fullName>Vanuatu - GMT+11:00</fullName>
            </value>
            <value>
                <fullName>United Kingdom - GMT +1</fullName>
            </value>
            <value>
                <fullName>Malaysia - GMT+8:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>