unpackaged/main/default/objects/BID__c/fields/Win_Price_Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Win_Price_Customer_Budget__c</fullName>
    <formula>Opportunity__r.Win_Price_Customer_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total budget, licence fees and consulting (from Opportunity)</inlineHelpText>
    <label>Win Price / Customer Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>