unpackaged/main/default/objects/BID__c/listViews/All_Bid.listView-meta.xml
<ListView>
    <fullName>All_Bid</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Bid_Status__c</columns>
    <columns>Bid_Received_Date__c</columns>
    <columns>Bid_Due_Date__c</columns>
    <columns>Days_to_Complete__c</columns>
    <columns>Region__c</columns>
    <columns>Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bid</label>
</ListView>