unpackaged/main/default/objects/BID__c/listViews/Bid_In_Progress.listView-meta.xml
<ListView>
    <fullName>Bid_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Bid_Title__c</columns>
    <columns>Bid_Manager__c</columns>
    <columns>Region__c</columns>
    <columns>Bid_Status__c</columns>
    <columns>Bid_Received_Date__c</columns>
    <columns>Bid_Due_Date__c</columns>
    <columns>Days_to_Complete__c</columns>
    <columns>Bid_Type__c</columns>
    <columns>Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bid_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Bid_Manager__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Existing_or_New_Customer__c</field>
        <operation>notEqual</operation>
        <value>No business fit</value>
    </filters>
    <label>Bid - In Progress</label>
</ListView>